--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://root:123@localhost:5432/nesjs_graphql_prisma?schema=public"
+DATABASE_URL="postgresql://root:123@localhost:5432/shop?schema=public"
 
 ACCESS_TOKEN_SECRET="secret"
 REFRESH_TOKEN_SECRET="banana"
